[package]
authors = ["Sean McArthur <sean@seanmonstar.com>"]
categories = ["web-programming::http-server"]
description = "serve the web at warp speeds"
documentation = "https://docs.rs/warp"
keywords = ["warp", "server", "http", "hyper"]
license = "MIT"
name = "warp"
readme = "README.md"
repository = "https://github.com/seanmonstar/warp"
version = "0.1.0"

[dependencies]
base64 = "0.9.2"
bitflags = "1"
bytes = "0.4.8"
futures = "0.1"
http = "0.1"
hyper = "0.12.6"
lazy_static = "1.0.2"
log = "0.4"
scoped-tls = "0.1.2"
serde = "1.0"
serde_json = "1.0"
serde_qs = "0.4.1"
serde_urlencoded = "0.5.2"
sha-1 = "0.7"
tokio = "0.1.7"

[dependencies.tungstenite]
default-features = false
version = "0.6"

[dev-dependencies]
handlebars = "1.0.0"
pretty_env_logger = "0.2"
serde_derive = "1.0"

[profile]

[profile.bench]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
incremental = false
